# agent-skills

./: .gitignore  .gitmodules  AGENTS.md  pixi.toml
.github/workflows/: verify.yml
agent-skill-bench/: AGENTS.md  README.md  pixi.toml  pyproject.toml
agent-skill-bench/src/agent_skill_bench/: __init__.py  cli.py  discovery.py  evaluation.py  fixtures.py  reporting.py  runners.py
agent-skill-bench/src/agent_skill_bench/application/: __init__.py  registry.py  service.py
agent-skill-bench/src/agent_skill_bench/domain/: __init__.py  assessment.py  catalog.py  execution.py
agent-skill-bench/src/agent_skill_bench/infrastructure/: __init__.py  skills.py
agent-skill-bench/src/agent_skill_bench/infrastructure/agent_runtime/: __init__.py  _workspace.py  base.py  claude_sdk.py  codex_cli.py  mock.py  schema.py
agent-skill-bench/src/agent_skill_bench/judges/: __init__.py  base.py  codex.py  mock.py
agent-skill-bench/src/agent_skill_bench/providers/: __init__.py  _skill_utils.py  base.py  claude.py  codex.py  mock.py
agent-skill-bench/tests/: README.md  test_claude_provider.py  test_cli.py  test_codex_judge.py  test_codex_provider.py  test_discovery.py  test_evaluation.py  test_fixtures.py  test_import.py  test_judges.py  test_provider.py  test_reporting.py  test_runner.py
agent-skill-bench/tests/fixtures/: context-notes.txt  sample-context-bundle.json  sample-generate.json  sample-repo.json  sample-suite.json
agent-skill-bench/tests/fixtures-repo/app/: README.md
agent-skill-bench/tests/fixtures-skills/uiux/: SKILL.md
docs/rfc/: RFC-0001.md  (+3 more)
gov/: config.toml
(+54 files in other folders)
